일정 상세 장소 연결